[gd_scene load_steps=3 format=2]

[ext_resource path="res://font/font_30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Script/Role_Selection.gd" type="Script" id=2]

[node name="RoleSeletion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 504.0
margin_bottom = 604.0
rect_min_size = Vector2( 500, 600 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 450 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 450 )

[node name="CharacterChooseBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 500.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 450 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 454.0
margin_right = 504.0
margin_bottom = 604.0
rect_min_size = Vector2( 500, 150 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Return"
icon_align = 1

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Play"
icon_align = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 508.0
margin_right = 1008.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 600 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer"]
margin_right = 500.0
margin_bottom = 600.0
color = Color( 0.466667, 0.466667, 0.466667, 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 450.0
margin_bottom = 550.0
rect_min_size = Vector2( 450, 550 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/MarginContainer"]
margin_right = 450.0
margin_bottom = 550.0
custom_fonts/mono_font = ExtResource( 1 )
custom_fonts/bold_italics_font = ExtResource( 1 )
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
text = "



Every warrior will be a good choice"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
